tests/language_modules/05_records/invalid_semantics/keyword_record_name.vf
module KeywordRecordName

type record is record
    id: Integer
end record

end KeywordRecordName